--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "clsx": "2.0.0",
     "framer-motion": "10.16.1",
     "lucide-react": "^0.561.0",
+    "msgpackr": "^1.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^7.11.0",
